pom-lexer/src/snapshots/booleans.snap
---
source: pom-lexer/src/tests.rs
expression: "lex(\"true false\")"
---
(
    [
        Token {
            kind: Bool,
            span: Span {
                start: 0,
                end: 4,
            },
        },
        Token {
            kind: Bool,
            span: Span {
                start: 5,
                end: 10,
            },
        },
        Token {
            kind: Eof,
            span: Span {
                start: 4294967295,
                end: 4294967295,
            },
        },
    ],
    [],
)
