pom-lexer/src/snapshots/operators.snap
---
source: pom-lexer/src/tests.rs
expression: "lex(\"+ -\")"
---
(
    [
        Token {
            kind: Plus,
            span: Span {
                start: 0,
                end: 1,
            },
        },
        Token {
            kind: Minus,
            span: Span {
                start: 2,
                end: 3,
            },
        },
        Token {
            kind: Eof,
            span: Span {
                start: 4294967295,
                end: 4294967295,
            },
        },
    ],
    [],
)
