pom-lexer/src/snapshots/whitespace.snap
---
source: pom-lexer/src/tests.rs
expression: "lex(\" \\t\\r\\n\")"
---
(
    [
        Token {
            kind: Eof,
            span: Span {
                start: 4294967295,
                end: 4294967295,
            },
        },
    ],
    Arena(
        [],
    ),
)
